# lcd-badge-ble

./: .gitignore  PROTOCOL.md  README.md  capture_le_passive.sh  dis_reads.txt  ebadge_inspect.py  gatt_dump_dg01.txt  superband_find_device.py
dg01-ble/: APK_PARITY.md  Cargo.toml
dg01-ble/scripts/: run_extra_ble_probes.sh  run_upload_like_app_tests.sh
dg01-ble/src/: device_info_gatt.rs  dial_upload.rs  main.rs
